# monorepo

./: .bazelrc  .gitignore  BUILD.bazel  Justfile  README.md  WORKSPACE
custom/python/: BUILD.bazel  binary.bzl  build.bzl  image.bzl  internal.bzl  library.bzl  main.sh  pythonpath.sh  test.bzl
precompiled/python/: internal.bzl
precompiled/python/grpcio/: BUILD.bazel
precompiled/python/psycopg2-binary/: .gitignore
precompiled/python/psycopg2-binary/psycopg2/: BUILD.bazel
precompiled/python/psycopg2_binary/: .gitignore  BUILD.bazel
precompiled/python/xxhash/: BUILD.bazel
product/: Justfile  pip_compile.sh  requirements.in  requirements_darwin_lock.txt  requirements_linux_lock.txt  requirements_lock.txt
product/hello-world/: BUILD.bazel  main.py
product/hello-world-custom/: BUILD.bazel  pip_compile.sh  requirements.in  requirements_darwin_lock.txt  requirements_linux_lock.txt
product/hello_world/: BUILD.bazel  lib.py
product/hello_world_custom/: BUILD.bazel  Justfile  main.py  requirements.in  requirements_lock.txt
product/logger/: BUILD.bazel  logger.py
