load("//custom/python:image.bzl", "py_image_with_requirements")
load("@product_container//:requirements.bzl", container_requirement = "requirement")
load("@product_host//:requirements.bzl", host_requirement = "requirement")

py_image_with_requirements(
    name = "hello-world-custom",
    srcs = ["main.py"],
    container_requirement = container_requirement,
    host_requirement = host_requirement,
    main = "main.py",
    deps = [
        "cryptography",
        "django",
        "psycopg2-binary",
        "//product/logger",
    ],
)
