load("//custom/python:image.bzl", "py_image_with_requirements")
load("//custom/python:test.bzl", "py_test_with_requirements")
load("//custom/python:library.bzl", "py_library")

py_image_with_requirements(
    name = "hello_world_custom",
    srcs = ["main.py"],
    imports = [
        "..",
    ],
    main = "main.py",
    deps = [
        "django",
        "psycopg2-binary",
        ":lib",
    ],
)

py_library(
    name = "lib",
    srcs = ["lib.py"],
    imports = [
        "..",
    ],
    deps = [
        "//product/logger",
    ],
)

py_test_with_requirements(
    name = "test",
    srcs = ["test.py"],
    imports = [
        "..",
    ],
    pip_import = "hello_world_custom",
    visibility = ["//visibility:public"],
    deps = [
        "django",
        "psycopg2-binary",
        "pytest",
        ":lib",
    ],
)
