load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "psycopg2_binary",
    srcs = glob(
        include = [
            "**/*.py",
        ],
    ),
    data = glob(
        include = [
            "**/*.so",
            "**/*.so.*",
        ],
    ),
    imports = ["."],
    visibility = ["//visibility:public"],
)
